# prediction-market-event

./: Cargo.toml  LICENSE  README.md
src/: error.rs  event.rs  information.rs  lib.rs  nostr.rs  nostr_event_types.rs
src/information/: information_variants.rs  mod.rs
src/nostr_event_types/: mod.rs  trait_dec.rs
src/tests/: event.rs  information.rs  mod.rs  nostr.rs
