[package]
name = "prediction-market-event"
version = "0.11.0"
edition = "2021"
description = "a library for creating and attesting to prediction market events"
readme = "README.md"
keywords = ["prediction", "market"]
license = "MIT"
repository = "https://github.com/Fedimint-Prediction-Markets/prediction-market-event"
documentation = "https://docs.rs/prediction-market-event/latest/prediction_market_event/"

[dependencies]
nostr = { version = "0.35.0", default-features = false, features = ["std"] } 
rand = "0.8.5"
serde = { version = "1.0.209", features = [ "derive" ] }
serde_json = "1.0.127"
sha2 = "0.10.8"
thiserror = "1.0.63"
